weitereichende Unterstützung von https://github.com/SAP/ui5-uiveri5/issues/25

--- a/scripts/popup/view/Start.view.xml
+++ b/scripts/popup/view/Start.view.xml
@@ -36,13 +36,13 @@
                                     <Text text=""/>
                                 </Column>
                                 <Column>
-                                    <Title text="{i18n>targetUrl}"/>
+                                    <Text text="{i18n>targetUrl}"/>
                                 </Column>
                                 <Column width="5rem" hAlign="Center">
-                                    <Title text="{i18n>showTab}"/>
+                                    <Text text="{i18n>showTab}"/>
                                 </Column>
                                 <Column width="5rem" hAlign="Center">
-                                    <Title text="{i18n>recordMockdata}"/>
+                                    <Text text="{i18n>recordMockdata}"/>
                                 </Column>
                             </columns>
                             <items>
